# custom_snake

./: .gitignore  Makefile  meson.build
.github/workflows/: ccpp.yml
src/: food.cpp  main.cpp  snake.cpp
src/include/: food.hpp  random.hpp  snake.hpp  utilites.hpp
tests/: tests.cpp
